--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.364.0",
     "moment": "^2.30.1",
-    "next": "14.1.4",
+    "next": "^13.4.19",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.0",
